# Loom

./: .gitignore  404.html  GUIDE.md  README.md  TESTING-EDITION.md  index.html  mkdocs.yml  project.yml  sitemap.xml
.github/workflows/: docs.yml  security.yml  windows-release.yml
Loom/: Info.plist
Loom/Agents/: AgentOrchestrator.swift  AgentPaneView.swift  AgentRegistry.swift  AgentRunReview.swift  AgentSessionStore.swift  AgentToolRunner.swift  AgentWorkbench.swift  AnthropicProvider.swift  CLIAgentProvider.swift  ItemProposal.swift  KeychainStore.swift  LLMProvider.swift  LMStudioCLI.swift  LMStudioProvider.swift  LMStudioRuntimeService.swift  LMStudioToolRepair.swift  ListResponseParser.swift  LiveAgentTasks.swift  LocalEndpoint.swift  LocalEndpointStore.swift  MCPService.swift  OllamaProvider.swift  OpenAICompatibleProvider.swift  ProposalCard.swift  StreamingState.swift  UsageCharts.swift  UsageService.swift  UsageView.swift  WorkspaceContext.swift
Loom/App/: AppIconExporter.swift  AppearanceSetting.swift  CrashReportSheet.swift  CrashService.swift  DictationService.swift  GitHubReleaseFetcher.swift  LoomApp.swift  LoomLogoMark.swift  LoomTheme.swift  SecretRedactor.swift  URLSchemeHandler.swift  UpdateService.swift
docs/: guide.md  index.md  windows-macos-parity-8.2.67.md  windows-macos-parity-8.2.68.md  windows-updater-8.2.69.md
guide/: index.html
search/: search_index.json
windows-tauri/: README.md  TESTING.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
windows-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
windows-tauri/src-tauri/.cargo/: config.toml
windows-tauri/src-tauri/capabilities/: default.json
windows-tauri/src-tauri/icons/: icon.icns
windows-tauri/src-tauri/migrations/: 001_init.sql  002_command_history.sql  003_local_endpoints.sql
windows-tauri/src-tauri/src/: crash.rs  db_commands.rs  fs_walk.rs  keychain.rs  lib.rs  security.rs  state.rs  updater.rs
windows-tauri/src-tauri/src/agents/: anthropic.rs  cli.rs  live_tasks.rs  mcp.rs  mod.rs  openai.rs  parser.rs  usage_service.rs
windows-tauri/src-tauri/src/db/: endpoints.rs  kanban.rs  mod.rs  notes.rs  workspace.rs
windows-tauri/src-tauri/src/shell_integration/: mod.rs  powershell.ps1
windows-tauri/src-tauri/src/terminal/: command_history.rs  commands.rs  mod.rs  pty.rs  transcripts.rs  windows_proc.rs
(+140 files in other folders)
