[package]
name = "loom"
version = "0.4.2"
description = "Loom for Windows: integrated workspace cockpit with terminal, editor, AI agents, kanban, and notes."
authors = ["BigBeardedMan"]
edition = "2021"
rust-version = "1.83"

[lib]
name = "loom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-window-state = "2"
tauri-plugin-deep-link = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
async-trait = "0.1"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "gzip"] }

rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
rusqlite_migration = "1.3"

portable-pty = "0.8"

keyring = { version = "3", default-features = false, features = ["windows-native", "apple-native", "sync-secret-service"] }

notify = "6"
notify-debouncer-mini = "0.4"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

dirs = "5"
which = "6"
url = "2"
bytes = "1"
base64 = "0.22"
regex = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_ProcessStatus",
  "Win32_Security",
] }

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libc = "0.2"

[dependencies.tauri-plugin-updater]
version = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"

[profile.dev]
incremental = true
opt-level = 0
